removed nav_button component, moved buttons to slideshow.js, clicking start over also redirects to slide1

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 #screen{
     border: 1px solid black;
     width: 1000px;
+    height: auto;
+}
+
+#screenStart{
+    border: 1px solid black;
+    width: 1000px;
+    height: 750px;
 }
 
 img{
